--- a/README
+++ b/README
@@ -1,3 +1,5 @@
+# Kuando Busy Light for MacOS Webex Status
+
 This is a quick script to enable integration between a users Webex status and a Kuando BusyLight for users of MacOS where
 currently no integration exists.
 
@@ -8,10 +10,11 @@ I run this script as a cronjob via crontab every 10 seconds.
 
 The script will poll the http api of the light, and if the light is found, it will poll the webex api and adjust the light accordingly.
 
-<b>.env file</b>
+**.env file**
 
-This repo contains an example .env file to use as a template for your own file.
-You must obtain the webex user ID of your webex account and add this with the variable 'WEBEX_USER' as well as your webex api key
-which should exist in the file as 'WEBEX_API_KEY'
+This repo contains an example .env file to use as a template for your own file. It contains the following values
+> WEBEX_API_KEY={This is your webex api key}
+>
+> WEBEX_USER={Your person ID string}
 
 I recommend using a webex bot for an api key as these do not expire unlike personal keys which do expire.
